fix(power down): changed some logic related to "errors"
check if current vested balance can cover the withdrawal fee then check if the current regular
balance can cover the fee. If neither can cover the fee to withdraw a vested balance, then there is
an error display.

WAL-250

--- a/src/components/Modal/GPOSModal/GPOSModal.scss
+++ b/src/components/Modal/GPOSModal/GPOSModal.scss
@@ -899,6 +899,10 @@ sm: 1275px);
     }
 
     &-items {
+      @include respond-to (mac) {
+        font-size: $f-18;
+      }
+
       font-size: $f-22;
       list-style-type: disc;
     }
